Fix overflow error on modal

--- a/src/app/modules/home/components/disclaimer-modal/disclaimer-modal.component.scss
+++ b/src/app/modules/home/components/disclaimer-modal/disclaimer-modal.component.scss
@@ -15,3 +15,11 @@
     }
   }
 }
+
+::ng-deep.cdk-global-overlay-wrapper {
+  display: flex;
+  position: absolute;
+  z-index: 1000;
+  overflow: auto;
+  pointer-events: auto;
+}
